apps/backend/envs/homelab/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-be-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: api.192.168.0.20.traefik.me
